# cl-sdk-cpp

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  gen_rewrite.py  gen_rewrite2.py  mailmap.txt  msg_editor.py  python_bindings.cpp  rebase_editor.py  rewrite.py  setup.py
.github/workflows/: build.yml  ci.yml  codeql.yml  pages.yml  release.yml
benchmarks/: benchmark.cpp
client_plugin/CorticalLabs/Source/CorticalLabs/: CorticalLabs.Build.cs
docs/: API_REFERENCE.md  ROADMAP.md
examples/: cl_sdk.nim
include/: CorticalLabs.h  CorticalLabs.hpp  cl_sdk.h
include/CorticalLabs/: CorticalLabs.hpp  cl_sdk.h
src/: CorticalLabs.cpp  example.cpp  libclsdk.c  libclsdk.cpp
tests/: mock_cl1_server.py  test_runner.cpp  test_simulator.cpp
unreal_plugin/CorticalLabs/: CorticalLabs.uplugin
unreal_plugin/CorticalLabs/Source/CorticalLabs/: CorticalLabs.Build.cs
unreal_plugin/CorticalLabs/Source/CorticalLabs/Private/: CorticalLabsBPLibrary.cpp
unreal_plugin/CorticalLabs/Source/CorticalLabs/Public/: CorticalLabsBPLibrary.h
wasm/: cl_wasm.cpp  index.html
